syntax="proto3";

message KafkaMessage{
	string id=1;
	enum MessageType{
		TEST=0;
		ERROR=1;
		EVENT=2;
		COMMAND=3;
	}
	MessageType message_type=2;
	string source=3;
	int32 retry_count=4;
	string payload=5;
	string datetime_created_utc=6;
}